Сверстана шапка главной страницы

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>Diving Dahab</h1>
-            <h2>Погрузитесь в мир волнительных приключений вдали от суеты большого города</h2>
+            <h1 class="h1_lead">Diving Dahab</h1>
+            <h2 class="h2_lead">Погрузитесь в мир волнительных приключений вдали от суеты большого города</h2>
           </div>
         </div>
       </div> <!-- cont -->
