Сверстана часть блока about
Описание и список

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="row">
           <div class="col-xs-12">
             <h1 class="h1_lead">Diving Dahab</h1>
+            <div class="clearfix"></div>
             <h2 class="h2_lead">Погрузитесь в мир волнительных приключений вдали от суеты большого города</h2>
           </div>
         </div>
@@ -75,12 +76,12 @@
 
         <div class="col-xs-12  col-lg-6">
           <h4 class="block-title left">О нас</h4>
-            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+            <p>Наш дайвинг-центр расположился в Дахабе - месте, идеально подходящем для размеренного спокойного отдыха и неторопливого исследования подводного мира Красного моря. Команда центра поделится знаниями о дайвинге, хорошим настроением и покажет места погружений, которые вы запомните на всю жизнь. </p>
           <ul>
-            <li class="about_free-wifi">Бесплатный Wi-Fi</li>
-            <li class="about_team">Рускоговорящая команда</li>
-            <li class="about_material">Необходимые материалы</li>
-            <li class="about_relax">Зона для отдыха</li>
+            <li><img src="img/icon_wi-fi.png" alt="">Бесплатный Wi-Fi</li>
+            <li><img src="img/icon_command.png" alt="">Рускоговорящая команда</li>
+            <li><img src="img/icon_book.png" alt="">Необходимые материалы</li>
+            <li><img src="img/icon_rest.png" alt="">Зона для отдыха</li>
           </ul>
         </div>
 
