--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Главная</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/function.js"></script>
 
@@ -78,10 +78,10 @@
           <h4 class="block-title left">О нас</h4>
             <p>Наш дайвинг-центр расположился в Дахабе - месте, идеально подходящем для размеренного спокойного отдыха и неторопливого исследования подводного мира Красного моря. Команда центра поделится знаниями о дайвинге, хорошим настроением и покажет места погружений, которые вы запомните на всю жизнь. </p>
           <ul>
-            <li><img src="img/icon_wi-fi.png" alt="">Бесплатный Wi-Fi</li>
-            <li><img src="img/icon_command.png" alt="">Рускоговорящая команда</li>
-            <li><img src="img/icon_book.png" alt="">Необходимые материалы</li>
-            <li><img src="img/icon_rest.png" alt="">Зона для отдыха</li>
+            <li class="col-xs-12 col-sm-6"><img src="img/icon_wi-fi.png" alt="">Бесплатный Wi-Fi</li>
+            <li class="col-xs-12 col-sm-6"><img src="img/icon_command.png" alt="">Рускоговорящая команда</li>
+            <li class="col-xs-12 col-sm-6"><img src="img/icon_book.png" alt="">Необходимые материалы</li>
+            <li class="col-xs-12 col-sm-6"><img src="img/icon_rest.png" alt="">Зона для отдыха</li>
           </ul>
         </div>
 
@@ -122,7 +122,7 @@
             <h3 class="name_description">Курсы</h3>
             <p class="desc_description">Начните обучение в нашей школе по программе PADI</p>
           </div>
-          <img src="http://placehold.it/200x200" alt="">
+          <img src="img/about_courses.jpg" alt="">
         </div>
 
         <div class="col-xs-12  col-sm-4">
@@ -130,7 +130,7 @@
             <h3 class="name_description">Места</h3>
             <p class="desc_description">Изучите все места для погружений в окресностях Дахаба</p>
           </div>
-          <img src="http://placehold.it/200x200" alt="">
+          <img src="img/about_places.jpg" alt="">
         </div>
 
         <div class="col-xs-12  col-sm-4">
@@ -138,7 +138,7 @@
             <h3 class="name_description">Проживание</h3>
             <p class="desc_description">Посмотрите наши специальные цены на отели</p>
           </div>
-          <img src="http://placehold.it/200x200" alt="">
+          <img src="img/about_resr.jpg" alt="">
         </div>
 
       </div>  <!-- /row -->
@@ -153,7 +153,7 @@
       <div class="row">
         <div class="col-xs-12">
           <h4 class="block-title  center">Хватит думать, пора нырять!</h4>
-          <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+          <p>Просто оставь заявку  на предполагаемую дату начала погружений, а мы перезвоним тебе, обсудим детали и ответим на все твои вопросы!</p>
           <a href="#" class="call-to-action_button">Записаться</a>
         </div>
       </div>
