--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="row">
 
 <!-- contacts -->
-        <div class="col-xs-12 col-sm-5 col-lg-4">
+        <div class="col-xs-12 col-sm-5 col-lg-4 adress">
           <div class="contacts">
             <h4 class="block-title  left  white">Россия</h4>
             <ul>
