--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="col-xs-12  col-sm-7  col-lg-8 send-us">
           <div class="col-xs-12">
             <h4 class="block-title  left  white">Напишите нам</h4>
-            <span class="send-us_text">Оставьте ваши отзывы</span>
+            <span class="send-us_text">Оставьте ваши отзывы, пожелания или вопросы. <br>Мы обязательно ответим вам.</span>
           </div>
           <div class="col-xs-12">
             <form action="#">
