--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <title>Главная</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/function.js"></script>
-
   <link rel="stylesheet" href="css/style.css">
   <!--[if lt IE 9]>
     <script src="http://html5shiv-printshiv.googlecode.com/svn/trunk/html5shiv-printshiv.js"></script>
@@ -278,11 +275,11 @@
             <span class="send-us_text">Оставьте ваши отзывы, пожелания или вопросы. <br>Мы обязательно ответим вам.</span>
           </div>
           <div class="col-xs-12">
-            <form action="#">
-              <div class="col-xs-12 col-sm-6"><input type="text" placeholder="Имя"></div>
-              <div class="col-xs-12 col-sm-6"><input type="text" placeholder="Email"></div>
-              <div class="col-xs-12"><textarea name="" id="" cols="30" rows="10">Сообщение</textarea></div>
-              <div class="col-xs-12 col-sm-6  col-lg-4"><button id="send-us_button">Отправить</button></div>
+            <form action="#" id="footer_form">
+              <div class="col-xs-12 col-sm-6 form-item"><input type="text" placeholder="Имя" class="validate[required]"></div>
+              <div class="col-xs-12 col-sm-6 form-item"><input type="text" placeholder="Email" class="validate[required,custom[email]]"></div>
+              <div class="col-xs-12 form-item"><textarea placeholder="Сообщение" class="validate[required]"></textarea></div>
+              <div class="col-xs-12 col-sm-6  col-lg-4 form-item"><button id="send-us_button">Отправить</button></div>
             </form>
           </div>
         </div>
@@ -312,7 +309,14 @@
   </footer>
 
 <!-- /sub-footer -->
+<div id="map"></div>
 
+
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery.validationEngine.min.js"></script>
+  <script src="js/jquery.validationEngine-ru.min.js"></script>
+
+  <script src="js/function.js"></script>
 
 </body>
 </html>
