Блок about и картинки

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
           <div class="col-xs-12">
             <h1 class="h1_lead">Diving Dahab</h1>
             <div class="clearfix"></div>
-            <h2 class="h2_lead">Погрузитесь в мир волнительных приключений вдали от суеты большого города</h2>
+            <h2 class="h2_lead">
+            <span>Погрузитесь в мир </span>
+            <span>волнительных приключений </span>
+            <span>вдали от суеты большого города</span></h2>
           </div>
         </div>
       </div> <!-- cont -->
@@ -83,23 +86,16 @@
         </div>
 
 <!-- pictures about -->
+      <div class="row">
         <div class="col-xs-12  col-lg-6  pictures-about">
-          <div class="col-lg-4  hidden-sm  hidden-xs">
-            <img src="http://placehold.it/400x200?text=1" alt="">
-          </div>
-          <div class="col-xs-8  col-xs-push-4  col-sm-push-4  col-lg-push-0">
-            <img src="http://placehold.it/400x200?text=2" alt="">
-          </div>
-          <div class="col-xs-4  col-xs-pull-8  col-sm-pull-8  col-lg-pull-0">
-            <img src="http://placehold.it/400x200?text=3" alt="">
-          </div>
-          <div class="hidden-xs  col-lg-4  hidden-sm">
-            <img src="http://placehold.it/400x200?text=4" alt="">
-          </div>
-          <div class="col-lg-4  hidden-sm  hidden-xs">
-            <img src="http://placehold.it/400x200?text=5" alt="">
-          </div>
+          <div class="col-lg-4  hidden-sm  hidden-xs pic-1" ></div>
+          <div class="col-xs-8  col-xs-push-4  col-sm-push-4  col-lg-push-0  pic-2"></div>
+          <div class="col-xs-4  col-xs-pull-8  col-sm-pull-8  col-lg-pull-0  pic-3"></div>
+          <div class="hidden-xs  col-lg-4  hidden-sm  pic-4"></div>
+          <div class="col-lg-4  hidden-sm  hidden-xs  pic-5"></div>
         </div>
+      </div>
+
 <!-- /pictures about -->
 
       </div>  <!-- row -->
@@ -114,27 +110,33 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-xs-12  col-sm-4">
-          <div class="description_content">
-            <h3 class="name_description">Курсы</h3>
-            <p class="desc_description">Начните обучение в нашей школе по программе PADI</p>
-          </div>
+        <div class="col-xs-12  col-sm-4  description_item" >
+            <h3 class="name_description"><span>Курсы</span></h3>
+            <div class="desc_description">
+              <span>Начните обучение </span>
+              <span>в нашей школе </span>
+              <span>по программе PADI</span>
+            </div>
           <img src="img/about_courses.jpg" alt="">
         </div>
 
-        <div class="col-xs-12  col-sm-4">
-          <div class="description_content">
-            <h3 class="name_description">Места</h3>
-            <p class="desc_description">Изучите все места для погружений в окресностях Дахаба</p>
-          </div>
+        <div class="col-xs-12  col-sm-4  description_item">
+            <h3 class="name_description"><span>Места</span></h3>
+            <div class="desc_description">
+              <span>Изучите все места </span>
+              <span>для погружений </span>
+              <span>в окресностях Дахаба</span>
+            </div>
           <img src="img/about_places.jpg" alt="">
         </div>
 
-        <div class="col-xs-12  col-sm-4">
-          <div class="description_content">
-            <h3 class="name_description">Проживание</h3>
-            <p class="desc_description">Посмотрите наши специальные цены на отели</p>
-          </div>
+        <div class="col-xs-12  col-sm-4  description_item">
+            <h3 class="name_description"><span>Проживание</span></h3>
+            <div class="desc_description">
+              <span>Посмотрите наши</span>
+              <span>специальные</span>
+              <span>цены на отели</span>
+            </div>
           <img src="img/about_resr.jpg" alt="">
         </div>
 
